<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boa Viagem</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticacao">Usuário e/ou senha inválidos</string>
    <string name="novo_gasto">Novo Gasto</string>
    <string name="nova_viagem">Nova Viagem</string>
    <string name="minhas_viagens">Minhas Viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="destino">Destino</string>
    <string name="tipo_de_viagem">Tipo de viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negocios</string>
    <string name="data_da_chegada">Data de Chegada</string>
    <string name="data_da_saida">Data de Saída</string>
    <string name="selecione">selecione</string>
    <string name="orcamento">Orçamento</string>
    <string name="quantidade_de_pessoas">Quantidade de Pessoas</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_novo_gasto">NovoGastoActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="valor">Valor</string>
    <string name="data">Data</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local</string>
    <string name="gastei">Gastei</string>
    <string name="categoria">Categoria</string>
    <string name="sair">Sair</string>
    <string name="remover_viagem">Remover viagem</string>
    <string name="remover">Remover</string>
    <string name="editar">Editar</string>
    <string name="gastos_realizados">Gastos realizados</string>
    <string name="opcoes">Opções</string>
    <string name="confirmacao_exclusao_viagem">Confirmar a exclusão de viagem</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="preferencias">Preferencias</string>
    <string name="modo_viagem_sumario">Determina a viagem ativa com base na data atual</string>
    <string name="modo_viagem">Modo viagem</string>
    <string name="informe_valor_limite">Informe o valor limite (em %)</string>
    <string name="valor_limite_sumario">Notifica quando os gastos ultrapassarem o percentual informado</string>
    <string name="valor_limite">Alerta de gastos</string>
    <string name="manter_conectado">Manter conectado</string>
    <string name="erro_salvar">Erro ao salvar</string>
    <string name="registro_salvo">Registro salvo com sucesso</string>
    <string name="conta_inexistente">Conta inexistente</string>
    <string name="sumario_preferencia">Configura as preferências globais</string>
    <string name="preencher_campos">Favor preencher todos os campos</string>
    <string name="mensagem_lista_gasto_vazia">Nenhum gasto para essa Viagem, adicione uma nova em \'+\'.</string>
    <string name="mensagem_lista_viagem_vazia">Nenhuma Viagem adicionada, adicione uma nova em \'+\'.</string>
    <string name="incluir">incluir</string>
    <string name="Selecione_antes_uma_viagem">Seleceione antes uma viagem</string>
    <string name="confirmacao_exclusao_gasto">Confirmar exclusão de despesa</string>
    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>


</resources>
