<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_all_margin">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2" >


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


        </TableRow>

        <br.com.casadocodigo.boaviagem.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

        <EditText android:id="@+id/destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/destino"
            android:inputType="text"/>

        </br.com.casadocodigo.boaviagem.widget.FloatLabelLayout>

        <TextView android:text="@string/tipo_de_viagem"/>

        <RadioGroup
            android:id="@+id/tipoViagem"
            android:orientation="horizontal">
            <RadioButton

                android:id="@+id/lazer"
                android:checked="true"
                android:text="@string/lazer" />

            <RadioButton
                android:id="@+id/negocios"
                android:layout_marginLeft="30dp"
                android:text="@string/negocios" />

        </RadioGroup>

        <TableRow>
            <TextView
                android:layout_gravity="center"
                android:text="@string/data_da_chegada"/>

            <TextView
                android:layout_gravity="center"
                android:text="@string/data_da_saida"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/dataChegadaButton"
                android:text="@string/selecione"
                />
            <Button
                android:id="@+id/dataSaidaButton"
                android:text="@string/selecione"
                />
        </TableRow>

        <br.com.casadocodigo.boaviagem.widget.FloatLabelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

        <EditText android:id="@+id/orcamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/orcamento"
            android:inputType="number"/>

        </br.com.casadocodigo.boaviagem.widget.FloatLabelLayout>

        <TableRow>

            <br.com.casadocodigo.boaviagem.widget.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/quantidadePessoas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantidade_de_pessoas"
                android:inputType="number"/>

            </br.com.casadocodigo.boaviagem.widget.FloatLabelLayout>

        </TableRow>
        <Button
            android:id="@+id/salvarViagemButton"
            android:text="@string/salvar"/>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

    </TableLayout>
</ScrollView>